*SVN*

* Fixed eager loading so that an aliased table cannot clash with a has_and_belongs_to_many join table [Rick]

* Add support for :include to with_scope [andrew@redlinesoftware.com]

* Support the use of public synonyms with the Oracle adapter; required ruby-oci8 v0.1.14 #4390 [schoenm@earthlink.net]

* Change periods (.) in table aliases to _'s.  Closes #4251 [jeff@ministrycentered.com]

* Changed has_and_belongs_to_many join to INNER JOIN for Mysql 3.23.x.  Closes #4348 [Rick]

* Fixed issue that kept :select options from being scoped [Rick]

* Fixed db_schema_import when binary types are present #3101 [DHH]

* Fixed that MySQL enums should always be returned as strings #3501 [DHH]

* Change has_many :through to use the :source option to specify the source association.  :class_name is now ignored. [Rick Olson]

    class Connection < ActiveRecord::Base
      belongs_to :user
      belongs_to :channel
    end

    class Channel < ActiveRecord::Base
      has_many :connections
      has_many :contacts, :through => :connections, :class_name => 'User' # OLD
      has_many :contacts, :through => :connections, :source => :user      # NEW
    end

* Fixed DB2 adapter so nullable columns will be determines correctly now and quotes from column default values will be removed #4350 [contact@maik-schmidt.de]

* Allow overriding of find parameters in scoped has_many :through calls [Rick Olson]

  In this example, :include => false disables the default eager association from loading.  :select changes the standard
  select clause.  :joins specifies a join that is added to the end of the has_many :through query.
  
    class Post < ActiveRecord::Base
      has_many :tags, :through => :taggings, :include => :tagging do
        def add_joins_and_select
          find :all, :select => 'tags.*, authors.id as author_id', :include => false,
            :joins => 'left outer join posts on taggings.taggable_id = posts.id left outer join authors on posts.author_id = authors.id'